# trueform

./: .gitignore  CMakeLists.txt  COMMERCIAL.md  CONTRIBUTING.md  README.md  README_python.md  pyproject.toml
benchmarks/: CMakeLists.txt  consolidate_results.py  run_benchmarks.cpp
benchmarks/cgal-common/: CMakeLists.txt  conversions.hpp
benchmarks/coal-common/: CMakeLists.txt  conversions.hpp
benchmarks/common/: CMakeLists.txt  rotation.hpp  test_meshes.hpp  timing.hpp
benchmarks/cut/: CMakeLists.txt  boolean-cgal-impl.cpp  boolean-cgal.cpp  boolean-cgal.hpp  boolean-igl-impl.cpp  boolean-igl.cpp  boolean-igl.hpp  boolean-tf-impl.cpp  boolean-tf.cpp  boolean-tf.hpp  embedded_isocurves-tf-impl.cpp  embedded_isocurves-tf.cpp  embedded_isocurves-tf.hpp  embedded_isocurves-vtk-impl.cpp  embedded_isocurves-vtk.cpp  embedded_isocurves-vtk.hpp  embedded_self_intersection_curves-igl-impl.cpp  embedded_self_intersection_curves-igl.cpp  embedded_self_intersection_curves-igl.hpp  embedded_self_intersection_curves-tf-impl.cpp  embedded_self_intersection_curves-tf.cpp  embedded_self_intersection_curves-tf.hpp
benchmarks/data/: dragon-50k.stl
benchmarks/fcl-common/: CMakeLists.txt  conversions.hpp
benchmarks/geometry/: CMakeLists.txt  icp_registration-igl-impl.cpp  icp_registration-igl.cpp  icp_registration-igl.hpp  icp_registration-tf-impl.cpp  icp_registration-tf.cpp  icp_registration-tf.hpp  icp_registration-vtk-impl.cpp  icp_registration-vtk.cpp  icp_registration-vtk.hpp  point_normals-igl-impl.cpp  point_normals-igl.cpp  point_normals-igl.hpp  point_normals-tf-impl.cpp  point_normals-tf.cpp  point_normals-tf.hpp  point_normals-vtk-impl.cpp  point_normals-vtk.cpp  point_normals-vtk.hpp  principal_curvatures-igl-impl.cpp  principal_curvatures-igl.cpp  principal_curvatures-igl.hpp  principal_curvatures-tf-impl.cpp  principal_curvatures-tf.cpp  principal_curvatures-tf.hpp
benchmarks/igl-common/: CMakeLists.txt  conversions.hpp
benchmarks/intersect/: CMakeLists.txt  isocontours-igl-impl.cpp  isocontours-igl.cpp  isocontours-igl.hpp  isocontours-tf-impl.cpp  isocontours-tf.cpp  isocontours-tf.hpp  isocontours-vtk-impl.cpp  isocontours-vtk.cpp  isocontours-vtk.hpp  mesh_mesh_curves-cgal-impl.cpp  mesh_mesh_curves-cgal.cpp  mesh_mesh_curves-cgal.hpp  mesh_mesh_curves-tf-impl.cpp  mesh_mesh_curves-tf.cpp  mesh_mesh_curves-tf.hpp  mesh_mesh_curves-vtk-impl.cpp  mesh_mesh_curves-vtk.cpp  mesh_mesh_curves-vtk.hpp
benchmarks/io/: CMakeLists.txt  read_stl-igl-impl.cpp  read_stl-igl.cpp  read_stl-igl.hpp  read_stl-tf-impl.cpp  read_stl-tf.cpp  read_stl-tf.hpp  read_stl-vtk-impl.cpp  read_stl-vtk.cpp  read_stl-vtk.hpp
benchmarks/spatial/: CMakeLists.txt  mod_tree-update-tf-impl.cpp  mod_tree-update-tf.cpp  mod_tree-update-tf.hpp  point_cloud-build_tree-nanoflann-impl.cpp  point_cloud-build_tree-nanoflann.cpp  point_cloud-build_tree-nanoflann.hpp  point_cloud-build_tree-tf-impl.cpp  point_cloud-build_tree-tf.cpp  point_cloud-build_tree-tf.hpp  point_cloud-knn-nanoflann-impl.cpp  point_cloud-knn-nanoflann.cpp  point_cloud-knn-nanoflann.hpp  point_cloud-knn-tf-impl.cpp  point_cloud-knn-tf.cpp  point_cloud-knn-tf.hpp  polygons-build_tree-cgal-impl.cpp  polygons-build_tree-cgal.cpp  polygons-build_tree-cgal.hpp  polygons-build_tree-coal-impl.cpp  polygons-build_tree-coal.cpp  polygons-build_tree-coal.hpp  polygons-build_tree-fcl-impl.cpp  polygons-build_tree-fcl.cpp  polygons-build_tree-fcl.hpp  polygons-build_tree-tf-impl.cpp  polygons-build_tree-tf.cpp  polygons-build_tree-tf.hpp  polygons-closest_point-cgal-impl.cpp  polygons-closest_point-cgal.cpp  polygons-closest_point-cgal.hpp  polygons-closest_point-tf-impl.cpp  polygons-closest_point-tf.cpp  polygons-closest_point-tf.hpp  polygons_to_polygons-closest_point-coal-impl.cpp  polygons_to_polygons-closest_point-coal.cpp  polygons_to_polygons-closest_point-coal.hpp  polygons_to_polygons-closest_point-fcl-impl.cpp  polygons_to_polygons-closest_point-fcl.cpp  polygons_to_polygons-closest_point-fcl.hpp  (+12 more)
benchmarks/topology/: CMakeLists.txt  boundary_paths-cgal-impl.cpp  boundary_paths-cgal.cpp  boundary_paths-cgal.hpp  boundary_paths-igl-impl.cpp  boundary_paths-igl.cpp  boundary_paths-igl.hpp  boundary_paths-tf-impl.cpp  boundary_paths-tf.cpp  boundary_paths-tf.hpp  boundary_paths-vtk-impl.cpp  boundary_paths-vtk.cpp  boundary_paths-vtk.hpp  connected_components-cgal-impl.cpp  connected_components-cgal.cpp  connected_components-cgal.hpp  connected_components-igl-impl.cpp  connected_components-igl.cpp  connected_components-igl.hpp  connected_components-tf-impl.cpp  connected_components-tf.cpp  connected_components-tf.hpp  connected_components-vtk-impl.cpp  connected_components-vtk.cpp  connected_components-vtk.hpp
benchmarks/vtk-common/: CMakeLists.txt  conversions.hpp
tests/: CMakeLists.txt  boolean_topology_test.cpp
tests/clean/: CMakeLists.txt  test_clean_curves.cpp  test_clean_points.cpp  test_clean_polygons.cpp  test_clean_segments.cpp
tests/common/: canonicalize_mesh.hpp  canonicalize_points.hpp  canonicalize_segments.hpp  mesh_generators.hpp  spatial_generators.hpp  type_traits.hpp
tests/core/: CMakeLists.txt  test_classify.cpp  test_closest_metric_point_pair.cpp  test_intersects.cpp  test_least_squares_parallel.cpp  test_ray_cast.cpp  test_transformed.cpp
tests/cut/: CMakeLists.txt  test_boolean.cpp  test_embedded_intersection_curves.cpp
tests/geometry/: CMakeLists.txt  test_alignment.cpp  test_curvature.cpp  test_triangulation.cpp
tests/intersect/: CMakeLists.txt  test_intersection_curves.cpp  test_isocontours.cpp  test_self_intersection.cpp
tests/io/: CMakeLists.txt  test_read_stl.cpp  test_write_stl.cpp
tests/reindex/: CMakeLists.txt  test_reindex_by_ids.cpp  test_reindex_by_mask.cpp  test_reindex_concatenated.cpp  test_reindex_on_points.cpp  test_reindex_split_components.cpp
tests/spatial/: CMakeLists.txt  test_gather_ids.cpp  test_intersects.cpp  test_mod_tree.cpp  test_mod_tree_queries.cpp  test_neighbor_search.cpp  (+1 more)
vtk/: CMakeLists.txt
wasm-examples/: CMakeLists.txt  Makefile  README.md  package.json
(+529 files in other folders)
